#pragma once

//======================================================================================================================
namespace texture {
    class Texture {
    public:
        virtual ~Texture();
    };
}
