#pragma once

//======================================================================================================================
namespace texture {
    class TextureSampler {
    public:
        virtual ~TextureSampler();
    };
}
