@startuml

skinparam defaultFontName monospaced

'=======================================================================================================================
package texture {
    '===================================================================================================================
    abstract class Texture

    '-------------------------------------------------------------------------------------------------------------------
    class TextureData {
        + bytes
        + width
        + height
        + numOfChannels
    }

    '===================================================================================================================
    abstract class TextureSampler

    '-------------------------------------------------------------------------------------------------------------------
    class TextureSamplingParameters {
        + neighborFilterMode
        + mipmapFilterMode
        + addressModeU
        + addressModeV
    }

    '===================================================================================================================
    abstract class TexturingObjectsCreator  {
        + {abstract} createTexture(TextureData)
        + {abstract} createTextureSampler(TextureSamplingParameters)
    }

    '-------------------------------------------------------------------------------------------------------------------
    TexturingObjectsCreator --> Texture
    TexturingObjectsCreator --> TextureData
    TexturingObjectsCreator --> TextureSampler
    TexturingObjectsCreator --> TextureSamplingParameters

    '===================================================================================================================
    abstract class TexturingMgr  {
        + {abstract} getTexturingObjectsCreator() -> &
        + {abstract} setActiveTextureSampler(TextureSamplerOrNull)
    }

    '-------------------------------------------------------------------------------------------------------------------
    TexturingMgr *-- TexturingObjectsCreator
    TexturingMgr o-- TextureSampler
}

'=======================================================================================================================
package texture_loader {
    '===================================================================================================================
    class TextureLoader {
        + loadFromFile(fileName) -> texture.TextureData
    }

    '-------------------------------------------------------------------------------------------------------------------
    TextureLoader --> texture.TextureData
}

'=======================================================================================================================
package texture_storage {
    '===================================================================================================================
    class TextureId

    '===================================================================================================================
    class TextureStorage {
        + add(uptr<Texture>) -> Id
    --
        + get(id) -> Texture&
    }

    '-------------------------------------------------------------------------------------------------------------------
    TextureStorage *-- TextureId
    TextureStorage *-- texture.Texture
}

'=======================================================================================================================
package renderer {
    class Renderer
}

'-----------------------------------------------------------------------------------------------------------------------
renderer.Renderer *-- texture_storage.TextureStorage

'=======================================================================================================================
@enduml
